Fix default behaviour

--- a/python/.env.example
+++ b/python/.env.example
@@ -1,7 +1,7 @@
 # Python Development Environment Configuration
 #
 # IMPORTANT: Copy this file to .env and customize for your system
-#            The WORKSPACE_PATH is REQUIRED - no fallback provided!
+#            WORKSPACE_PATH should be set (defaults to current directory if not set)
 #
 # cp .env.example .env
 
@@ -10,7 +10,18 @@
 # =============================================================================
 # Path to your development workspace directory
 # This directory will be mounted as /workspace inside the container
+
+# Linux/macOS examples:
 WORKSPACE_PATH=/home/user/development
+# WORKSPACE_PATH=/Users/username/development
+
+# Windows examples:
+# WORKSPACE_PATH=C:/Users/username/development
+# WORKSPACE_PATH=C:/dev/projects
+# WORKSPACE_PATH=D:/code
+
+# Current directory (fallback if not set - NOT recommended for production use):
+# WORKSPACE_PATH=.
 
 # =============================================================================
 # PYTHON CONFIGURATION (OPTIONAL)
@@ -86,8 +97,7 @@ CPU_RESERVATION=0.5         # Minimum guaranteed CPU (default: 0.5 cores)
 # =============================================================================
 # EXAMPLE DIRECTORY STRUCTURE
 # =============================================================================
-# Based on the above configuration, your directory structure might look like:
-#
+# Linux/macOS example:
 # /home/user/
 # ├── development/           # WORKSPACE_PATH
 # │   ├── project1/
@@ -104,5 +114,23 @@ CPU_RESERVATION=0.5         # Minimum guaranteed CPU (default: 0.5 cores)
 #     ├── id_rsa.pub
 #     └── known_hosts
 #
-# Ensure workspace directory is owned by your user:
-# sudo chown -R $USER:$USER /home/user/development
+# Windows example:
+# C:/Users/username/
+# ├── development/           # WORKSPACE_PATH=C:/Users/username/development
+# │   ├── project1/
+# │   │   ├── main.py
+# │   │   ├── requirements.txt
+# │   │   └── setup.py
+# │   ├── project2/
+# │   └── notebooks/
+# │       └── analysis.ipynb
+# ├── .gitconfig             # %USERPROFILE%/.gitconfig
+# ├── .git-credentials       # %USERPROFILE%/.git-credentials
+# └── .ssh/                  # %USERPROFILE%/.ssh
+#     ├── id_rsa
+#     ├── id_rsa.pub
+#     └── known_hosts
+#
+# Ensure workspace directory permissions:
+# Linux/macOS: sudo chown -R $USER:$USER /home/user/development
+# Windows: Ensure your user has full control of the directory
