--- a/arr-stack/compose.yaml
+++ b/arr-stack/compose.yaml
@@ -1,6 +1,4 @@
 ---
-version: '3.8'
-
 # Common path configurations - REQUIRED in your .env file
 # Copy .env.example to .env and set these variables
 x-common-variables: &common-variables
@@ -15,7 +13,6 @@ networks:
     internal: false
 
 services:
-
   watchtower:
     image: containrrr/watchtower
     container_name: watchtower
@@ -35,7 +32,11 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "wget --no-verbose --tries=1 --spider http://localhost:8080/v1/update || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "wget --no-verbose --tries=1 --spider http://localhost:8080/v1/update || exit 1",
+        ]
       interval: 60s
       timeout: 10s
       retries: 3
@@ -143,7 +144,11 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8686/api/v1/system/status || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:8686/api/v1/system/status || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -180,7 +185,11 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:7878/api/v3/system/status || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:7878/api/v3/system/status || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -217,7 +226,11 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8989/api/v3/system/status || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:8989/api/v3/system/status || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -252,7 +265,11 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:9696/api/v1/system/status || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:9696/api/v1/system/status || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -289,7 +306,11 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:6767/api/system/status || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:6767/api/system/status || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -357,7 +378,8 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5055/api/v1/status || exit 1"]
+      test:
+        ["CMD-SHELL", "curl -f http://localhost:5055/api/v1/status || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -463,7 +485,11 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8081/api?mode=version || exit 1"]
+      test:
+        [
+          "CMD-SHELL",
+          "curl -f http://localhost:8081/api?mode=version || exit 1",
+        ]
       interval: 30s
       timeout: 10s
       retries: 3
@@ -499,7 +525,8 @@ services:
     security_opt:
       - no-new-privileges:true
     healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:5076/actuator/health || exit 1"]
+      test:
+        ["CMD-SHELL", "curl -f http://localhost:5076/actuator/health || exit 1"]
       interval: 30s
       timeout: 10s
       retries: 3
