--- a/arr-stack/compose.yaml
+++ b/arr-stack/compose.yaml
@@ -25,22 +25,23 @@ services:
     cap_drop:
       - ALL
     cap_add:
-      - CHOWN
+      - CHOWN # Required for config file management
       - SETUID
       - SETGID
       - DAC_OVERRIDE
     security_opt:
       - no-new-privileges:true
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "wget --no-verbose --tries=1 --spider http://localhost:8080/v1/update || exit 1",
-        ]
-      interval: 60s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    #     [
+    #       "CMD-SHELL",
+    #       "wget --no-verbose --tries=1 --spider http://localhost:8080/v1/update || exit 1",
+    #     ]
+    #   interval: 60s
+    #   timeout: 10s
+    #   retries: 3
+    #   start_period: 30s
     deploy:
       resources:
         limits:
@@ -51,11 +52,17 @@ services:
           cpus: 0.1
     # Watchtower runs outside VPN network to maintain internet access during updates
 
+
   gluetun:
     image: qmcgaw/gluetun
     container_name: gluetun
     cap_add:
-      - NET_ADMIN
+      - NET_ADMIN # Required for VPN and routing operations
+      - CHOWN # Required for managing VPN configuration files
+      - FOWNER # Required for file ownership operations
+      - DAC_OVERRIDE # Required for bypassing file permission checks
+      - SETUID # Required for changing user context
+      - SETGID # Required for changing group context
     cap_drop:
       - ALL
     devices:
@@ -87,6 +94,8 @@ services:
       # OpenVPN credentials (use environment variables for security)
       - OPENVPN_USER=${VPN_USERNAME}
       - OPENVPN_PASSWORD=${VPN_PASSWORD}
+      - OPENVPN_PROTOCOL=${OPENVPN_PROTOCOL:-tcp} # optional: tcp or udp
+      - OPENVPN_VERSION=${OPENVPN_VERSION:-2.6} # optional: 2.6 or 2.5
       # Wireguard (alternative to OpenVPN - uncomment if using Wireguard)
       # - WIREGUARD_PRIVATE_KEY=${VPN_PRIVATE_KEY}
       # - WIREGUARD_ADDRESSES=${VPN_ADDRESSES}
@@ -99,6 +108,24 @@ services:
       - UPDATER_PERIOD=24h
       # Health check URL
       - HEALTH_VPN_DURATION_INITIAL=30s
+      # Firewall settings
+      - FIREWALL=on
+      - BLOCK_MALICIOUS=on # Block malicious hostnames and IPs with Unbound
+      - BLOCK_SURVEILLANCE=on # Block surveillance hostnames and IPs with Unbound
+      - BLOCK_ADS=on # Block ads hostnames and IPs with Unbound
+      # DNS Settings
+      - DNS_UPDATE_PERIOD=24h
+      - DNS_ADDRESS=127.0.0.1 # Use internal DoT server (default changed in recent versions)
+      - DOT=on
+      - DOT_PROVI5ERS=cloudflare
+      - DOT_PRIVATE_ADDRESS=127.0.0.1/8,10.0.0.0/8,172.16.0.0/12,192.168.0.0/16,169.254.0.0/16,::1/128,fc00::/7,fe80::/10,::ffff:7f00:1/104,::ffff:a00:0/104,::ffff:a9fe:0/112,::ffff:ac10:0/108,::ffff:c0a8:0/112
+      - DOT_CACHING=on
+      - DOT_IPV6=off
+    # Health check to ensure VPN is up is handled by Gluetun
+    # Do NOT override the healthcheck test as it is essential for Gluetun's operation
+    healthcheck:
+      retries: 3
+      start_period: 60s
     networks:
       - vpn-network
     restart: unless-stopped
@@ -106,12 +133,6 @@ services:
       - no-new-privileges:true
     sysctls:
       - net.ipv6.conf.all.disable_ipv6=1
-    healthcheck:
-      test: ["CMD", "/gluetun-entrypoint", "healthcheck"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 30s
     deploy:
       resources:
         limits:
@@ -138,21 +159,25 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -f http://localhost:8686/api/v1/system/status || exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    # [
+    #   "CMD-SHELL",
+    #   "curl -f http://localhost:8686/api/v1/system/status || exit 1",
+    # ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -179,21 +204,25 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -f http://localhost:7878/api/v3/system/status || exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    # [
+    #   "CMD-SHELL",
+    #   "curl -f http://localhost:7878/api/v3/system/status || exit 1",
+    # ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -220,21 +249,25 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -f http://localhost:8989/api/v3/system/status || exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    # [
+    #   "CMD-SHELL",
+    #   "curl -f http://localhost:8989/api/v3/system/status || exit 1",
+    # ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -259,21 +292,25 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -f http://localhost:9696/api/v1/system/status || exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    # [
+    #   "CMD-SHELL",
+    #   "curl -f http://localhost:9696/api/v1/system/status || exit 1",
+    # ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -300,21 +337,25 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -f http://localhost:6767/api/system/status || exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    # [
+    #   "CMD-SHELL",
+    #   "curl -f http://localhost:6767/api/system/status || exit 1",
+    # ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -325,7 +366,7 @@ services:
           cpus: 0.1
 
   flaresolverr:
-    image: lscr.io/linuxserver/flaresolverr:latest
+    image: flaresolverr/flaresolverr:latest
     container_name: flaresolverr
     environment:
       - LOG_LEVEL=${LOG_LEVEL:-info}
@@ -338,16 +379,20 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8191/ || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl -f http://localhost:8191/ || exit 1"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -372,18 +417,22 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test:
-        ["CMD-SHELL", "curl -f http://localhost:5055/api/v1/status || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    # ["CMD-SHELL", "curl -f http://localhost:5055/api/v1/status || exit 1"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -394,7 +443,7 @@ services:
           cpus: 0.2
 
   requestrr:
-    image: darkalfxlscr.io/linuxserver/requestrr:latest
+    image: lscr.io/linuxserver/requestrr:latest
     container_name: requestrr
     environment:
       - TZ=${TZ:-Europe/London}
@@ -406,16 +455,20 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:4545/ || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl -f http://localhost:4545/ || exit 1"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -442,17 +495,21 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test: ["CMD-SHELL", "curl -f http://localhost:8080/ || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test: ["CMD-SHELL", "curl -f http://localhost:8080/ || exit 1"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -479,21 +536,25 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test:
-        [
-          "CMD-SHELL",
-          "curl -f http://localhost:8081/api?mode=version || exit 1",
-        ]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    # [
+    #   "CMD-SHELL",
+    #   "curl -f http://localhost:8081/api?mode=version || exit 1",
+    # ]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
@@ -519,18 +580,22 @@ services:
       gluetun:
         condition: service_healthy
     restart: unless-stopped
-    user: "1000:1000"
-    cap_drop:
-      - ALL
-    security_opt:
-      - no-new-privileges:true
-    healthcheck:
-      test:
-        ["CMD-SHELL", "curl -f http://localhost:5076/actuator/health || exit 1"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
-      start_period: 60s
+    # Temporarily simplified security for debugging
+    # user: "1000:1000"
+    # cap_add:
+    #   - CHOWN # Required for config file management
+    # cap_drop:
+    #   - ALL
+    # security_opt:
+    #   - no-new-privileges:true
+    # healthcheck temporarily disabled:
+    # healthcheck:
+    #   test:
+    # ["CMD-SHELL", "curl -f http://localhost:5076/actuator/health || exit 1"]
+    #   interval: 30s
+    #   timeout: 10s
+    #   retries: 3
+    # start_period: 60s
     deploy:
       resources:
         limits:
